Query Section added

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@kolkov/angular-editor": "^1.1.2",
+    "export-to-csv": "^0.2.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "xlsx": "^0.16.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
